v1
    - Initial set up of folder structure, assets, libraries, Makefile